Move reload to dynamic package, external example to external package Renamed Account -> Credentials, AccountProperties -> Account